Fixed grid gap

--- a/_sass/base/_body.scss
+++ b/_sass/base/_body.scss
@@ -4,7 +4,7 @@ body {
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-template-rows: repeat(3, auto);
-	gap: 0;
+	gap: 1rlh;
 
 	max-width: calc(1rlh * 28);
 
