--- a/_sass/layout/footer.scss
+++ b/_sass/layout/footer.scss
@@ -2,8 +2,6 @@
 
 footer {
 	padding-block: 1rlh;
-
-	margin-block-start: 1rlh;
 	border-top: var(--border-thickness) solid;
 
 	text-transform: lowercase;
